--- a/my-maven-project/Jenkinsfile
+++ b/my-maven-project/Jenkinsfile
@@ -14,14 +14,14 @@ pipeline {
             steps {
                 withSonarQubeEnv(SONARQUBE_SERVER) {
                     sh """
-                        ${tool MAVEN_TOOL}/bin/mvn clean verify sonar:sonar -Dsonar.projectKey=maven-demo
+                        ${tool MAVEN_TOOL}/bin/mvn clean verify sonar:sonar -Dsonar.projectKey=maven-demo -Dsonar.host.url=http://localhost:9000
                     """
                 }
             }
         }
         stage('Quality Gate') {
             steps {
-                timeout(time: 5, unit: 'MINUTES') {
+                timeout(time: 15, unit: 'MINUTES') {  // Increased timeout
                     script {
                         def qualityGate = waitForQualityGate()
                         if (qualityGate.status != 'OK') {
