--- a/my-maven-project/Jenkinsfile
+++ b/my-maven-project/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-       MAVEN_TOOL = 'Maven 3.8.5'
+       MAVEN_TOOL = 'Maven'
     }
 
     stages {
