--- a/my-maven-project/Jenkinsfile
+++ b/my-maven-project/Jenkinsfile
@@ -14,8 +14,13 @@ pipeline {
 
     stage('Build') {
       steps {
-        // Use Maven to clean and package the project, skipping tests
-        sh 'mvn -B -DskipTests clean package'
+        script {
+          // Navigate to the directory containing pom.xml
+          dir('maven-demo/my-maven-project') {
+            // Use Maven to clean and package the project, skipping tests
+            sh 'mvn -B -DskipTests clean package'
+          }
+        }
       }
     }
 
@@ -23,13 +28,16 @@ pipeline {
       steps {
         script {
           withCredentials([string(credentialsId: 'SonarQube', variable: 'SONAR_TOKEN')]) {
-            // Run SonarQube analysis with the token
-            sh """
-              mvn clean verify sonar:sonar \
-              -Dsonar.projectKey=maven-demo \
-              -Dsonar.login=${SONAR_TOKEN} \
-              -Dsonar.host.url=http://localhost:9000
-            """
+            // Navigate to the correct directory for SonarQube analysis
+            dir('maven-demo/my-maven-project') {
+              // Run SonarQube analysis with the token
+              sh """
+                mvn clean verify sonar:sonar \
+                -Dsonar.projectKey=maven-demo \
+                -Dsonar.login=${SONAR_TOKEN} \
+                -Dsonar.host.url=http://localhost:9000
+              """
+            }
           }
         }
       }
