--- a/my-maven-project/Jenkinsfile
+++ b/my-maven-project/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
       steps {
         script {
           // Navigate to the directory containing pom.xml
-          dir('maven-demo/my-maven-project') {
+          dir('my-maven-project') {
             // Use Maven to clean and package the project, skipping tests
             sh 'mvn -B -DskipTests clean package'
           }
