--- a/my-maven-project/Jenkinsfile
+++ b/my-maven-project/Jenkinsfile
@@ -1,69 +1,84 @@
 pipeline {
-  agent any
-
-  tools {
-    maven 'M3'  // This refers to the Maven tool installed on Jenkins (make sure 'M3' is configured in Jenkins tools)
-  }
-
-  stages {
-    stage('Checkout Code') {
-      steps {
-        git branch: 'main', url: 'https://github.com/akhil2099/maven-demo.git'
-      }
-    }
-
-    stage('Build') {
-      steps {
-        script {
-          // Navigate to the directory containing pom.xml
-          dir('maven-demo/my-maven-project') {
-            // Use Maven to clean and package the project, skipping tests
-            sh 'mvn -B -DskipTests clean package'
-          }
+    agent {
+        docker {
+            image 'maven:3.8.4-openjdk-11' // Using a Maven Docker image with OpenJDK
+            args '--privileged' // Optional: If you need additional privileges for certain actions
         }
-      }
+    }
+    
+    environment {
+        // Credentials ID for Docker Hub (if applicable)
+        DOCKER_HUB_CREDENTIALS_ID = "docker-credential-id"  // Credentials ID in Jenkins
     }
 
-    stage('SonarQube Analysis') {
-      steps {
-        script {
-          withCredentials([string(credentialsId: 'SonarQube', variable: 'SONAR_TOKEN')]) {
-            // Navigate to the correct directory for SonarQube analysis
-            dir('maven-demo/my-maven-project') {
-              // Run SonarQube analysis with the token
-              sh """
-                mvn clean verify sonar:sonar \
-                -Dsonar.projectKey=maven-demo \
-                -Dsonar.login=${SONAR_TOKEN} \
-                -Dsonar.host.url=http://localhost:9000
-              """
+    stages {
+        stage('Initialize') {
+            steps {
+                script {
+                    // Initialize Docker tool in Jenkins (This is optional if Docker is already configured in the container)
+                    def dockerHome = tool 'Docker'  // Ensure 'Docker' is configured in Jenkins' Global Tool Configuration
+                    env.PATH = "${dockerHome}/bin:${env.PATH}"
+                    echo "Docker initialized. PATH is updated."
+                }
             }
-          }
         }
-      }
-    }
 
-    stage('Quality Gate') {
-      steps {
-        timeout(time: 15, unit: 'MINUTES') {  // Increased timeout
-          script {
-            def qualityGate = waitForQualityGate()
-            if (qualityGate.status != 'OK') {
-              error "Quality Gate failed: ${qualityGate.status}"
+        stage('Checkout') {
+            steps {
+                // Checkout the code from GitHub repository
+                git branch: 'main', url: 'https://github.com/akhil2099/maven-demo.git'
             }
-          }
         }
-      }
-    }
-  }
 
-  post {
-    success {
-      echo 'Pipeline completed successfully!'
+        stage('Build with Maven') {
+            steps {
+                // Build the project using Maven
+                script {
+                    sh 'mvn clean install'
+                }
+            }
+        }
+
+        stage('SonarQube Analysis') {
+            steps {
+                // Run SonarQube analysis using Maven
+                script {
+                    withSonarQubeEnv('SonarQube') {
+                        sh 'mvn sonar:sonar'
+                    }
+                }
+            }
+        }
+
+        stage('Test') {
+            steps {
+                // Run tests with Maven (optional)
+                script {
+                    sh 'mvn test'
+                }
+            }
+        }
+
+        stage('Quality Gate') {
+            steps {
+                // Wait for SonarQube quality gate result
+                script {
+                    timeout(time: 1, unit: 'HOURS') {
+                        waitForQualityGate abortPipeline: true
+                    }
+                }
+            }
+        }
     }
-    failure {
-      echo 'Pipeline failed. Check the logs for more details.'
+
+    post {
+        success {
+            echo 'Build and SonarQube analysis completed successfully.'
+        }
+
+        failure {
+            echo 'Build or SonarQube analysis failed.'
+        }
     }
-  }
 }
 
