--- a/my-maven-project/pom.xml
+++ b/my-maven-project/pom.xml
@@ -12,6 +12,12 @@
     <build>
         <plugins>
 
+		<plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.0.2</version>
+	</plugin>
+
 	    <plugin>
             	<groupId>org.sonarsource.scanner.maven</groupId>
            	 <artifactId>sonar-maven-plugin</artifactId>
