--- a/my-maven-project/Jenkinsfile
+++ b/my-maven-project/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
                 mvn clean verify sonar:sonar \
                 -Dsonar.projectKey=maven-demo \
                 -Dsonar.login=${SONAR_TOKEN} \
-                -Dsonar.host.url=http://localhost:9000
+                -Dsonar.host.url=http://sonarqube-sonarqube-1:9000
               """
             }
           }
