--- a/my-maven-project/pom.xml
+++ b/my-maven-project/pom.xml
@@ -11,12 +11,12 @@
 
     <build>
         <plugins>
-
-	    <plugin>
-            	<groupId>org.sonarsource.scanner.maven</groupId>
-           	 <artifactId>sonar-maven-plugin</artifactId>
-            	<version>3.9.0.2155</version> <!-- Use the latest compatible version -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.0.2155</version>
             </plugin>
+
             <!-- Compiler plugin to compile Java code -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -41,7 +41,6 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!-- Specify the fully qualified class name (package + class) -->
                     <mainClass>com.example.App</mainClass>
                 </configuration>
             </plugin>
