--- a/my-maven-project/Jenkinsfile
+++ b/my-maven-project/Jenkinsfile
@@ -23,6 +23,7 @@ pipeline {
         stage('SonarQube Analysis') {
             steps {
                 dir('my-maven-project') {
+		    sh  'mvn help:effective-settings'
                     sh 'mvn clean verify sonar:sonar'
                 }
             }
